crates/ty_python_semantic/resources/mdtest/snapshots/paramspec_subcall_er…_-_`ParamSpec`_error_lo…_-_Functions_(1249b2f4f6837bd8).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: paramspec_subcall_error_location.md - `ParamSpec` error locations - Functions
mdtest path: crates/ty_python_semantic/resources/mdtest/paramspec_subcall_error_location.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Callable
 2 | 
 3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
 4 | 
 5 | def fn1(a: int, b: int, c: int) -> None: ...
 6 | 
 7 | # error: [invalid-argument-type]
 8 | # error: [invalid-argument-type]
 9 | # error: [unknown-argument]
10 | foo(fn1, "a", 2, c="c", unknown=1)
11 | 
12 | def fn2(a: int) -> None: ...
13 | 
14 | # error: [too-many-positional-arguments]
15 | foo(fn2, 1, 2, 3)
16 | 
17 | def fn3(a: int, /) -> None: ...
18 | 
19 | # error: [positional-only-parameter-as-kwarg]
20 | foo(fn3, a=1)
21 | 
22 | def fn4(a: int, b: int) -> None: ...
23 | 
24 | # error: [parameter-already-assigned]
25 | # error: [missing-argument]
26 | foo(fn4, 1, a=2)
27 | 
28 | # error: [missing-argument]
29 | foo(fn4)
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
  --> src/mdtest_snippet.py:10:10
   |
 8 | # error: [invalid-argument-type]
 9 | # error: [unknown-argument]
10 | foo(fn1, "a", 2, c="c", unknown=1)
   |          ^^^ Expected `int`, found `Literal["a"]`
11 |
12 | def fn2(a: int) -> None: ...
   |
info: Function defined here
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^         ------------------ Parameter declared here
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
  --> src/mdtest_snippet.py:10:18
   |
 8 | # error: [invalid-argument-type]
 9 | # error: [unknown-argument]
10 | foo(fn1, "a", 2, c="c", unknown=1)
   |                  ^^^^^ Expected `int`, found `Literal["c"]`
11 |
12 | def fn2(a: int) -> None: ...
   |
info: Function defined here
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^                                            ------------------ Parameter declared here
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[unknown-argument]: Argument `unknown` does not match any known parameter of function `foo`
  --> src/mdtest_snippet.py:10:25
   |
 8 | # error: [invalid-argument-type]
 9 | # error: [unknown-argument]
10 | foo(fn1, "a", 2, c="c", unknown=1)
   |                         ^^^^^^^^^
11 |
12 | def fn2(a: int) -> None: ...
   |
info: Function signature here
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `unknown-argument` is enabled by default

```

```
error[too-many-positional-arguments]: Too many positional arguments to function `foo`: expected 1, got 3
  --> src/mdtest_snippet.py:15:13
   |
14 | # error: [too-many-positional-arguments]
15 | foo(fn2, 1, 2, 3)
   |             ^
16 |
17 | def fn3(a: int, /) -> None: ...
   |
info: Function signature here
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `too-many-positional-arguments` is enabled by default

```

```
error[positional-only-parameter-as-kwarg]: Positional-only parameter 1 (`a`) passed as keyword argument of function `foo`
  --> src/mdtest_snippet.py:20:10
   |
19 | # error: [positional-only-parameter-as-kwarg]
20 | foo(fn3, a=1)
   |          ^^^
21 |
22 | def fn4(a: int, b: int) -> None: ...
   |
info: Function signature here
 --> src/mdtest_snippet.py:3:5
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `positional-only-parameter-as-kwarg` is enabled by default

```

```
error[missing-argument]: No argument provided for required parameter `b` of function `foo`
  --> src/mdtest_snippet.py:26:1
   |
24 | # error: [parameter-already-assigned]
25 | # error: [missing-argument]
26 | foo(fn4, 1, a=2)
   | ^^^^^^^^^^^^^^^^
27 |
28 | # error: [missing-argument]
   |
info: Parameter declared here
 --> src/mdtest_snippet.py:3:37
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |                                     ^^^^^^^^^^^^^
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `missing-argument` is enabled by default

```

```
error[parameter-already-assigned]: Multiple values provided for parameter `a` of function `foo`
  --> src/mdtest_snippet.py:26:13
   |
24 | # error: [parameter-already-assigned]
25 | # error: [missing-argument]
26 | foo(fn4, 1, a=2)
   |             ^^^
27 |
28 | # error: [missing-argument]
   |
info: rule `parameter-already-assigned` is enabled by default

```

```
error[missing-argument]: No arguments provided for required parameters `a`, `b` of function `foo`
  --> src/mdtest_snippet.py:29:1
   |
28 | # error: [missing-argument]
29 | foo(fn4)
   | ^^^^^^^^
   |
info: Parameters declared here
 --> src/mdtest_snippet.py:3:16
  |
1 | from typing import Callable
2 |
3 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 |
5 | def fn1(a: int, b: int, c: int) -> None: ...
  |
info: rule `missing-argument` is enabled by default

```
